force-app/main/default/objects/VisualAntidote__FastFormsAuth__c/VisualAntidote__FastFormsAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Information regarding instance and force.com site URL</description>
    <label>Formstack Auth</label>
</CustomObject>