force-app/main/default/objects/VisualAntidote__FastFormsAuth__c/fields/VisualAntidote__Environment__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Environment__c</fullName>
    <label>Environment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>