force-app/main/default/objects/VisualAntidote__FastFormsAuth__c/fields/VisualAntidote__ReCaptcha_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__ReCaptcha_Secret_Key__c</fullName>
    <label>ReCaptcha Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>