force-app/main/default/objects/VisualAntidote__FastFormsAuth__c/fields/VisualAntidote__Site_Url__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Site_Url__c</fullName>
    <label>Site Url</label>
    <type>Url</type>
</CustomField>